[tool.poetry]
name = "atscraper"
version = "0.1.0"
description = ""
authors = ["RexBanner6000 <tghaynes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
jupyter = "^1.1.1"
notebook = "^7.2.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
numpy = "^2.1.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
